# SimpleFile-Linux

./: .gitignore  LICENSE  README.md  com.simplefile.SimpleFile.yml  linux-native-integration-plan.md  package.json  patch.cjs
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-automerge.yml  flatpak.yml  release.yml
docs/: BUGS.md  CHANGELOG.md  CLOUD_DRIVES.md  CODE_ANALYSIS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_OPPORTUNITIES.md  RELEASE_1.1.0.md  ROADMAP.md  RUST_MIGRATION_FEASIBILITY.md  SECURITY.md  STARTUP_FIX_NOTES.md  SUPPORT.md  UI_BACKEND_REVIEW.md  UPDATER_RELEASE.md  svelte-migration-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/css/: styles.css
frontend/src/lib/: api.ts  appState.ts  coreFileManager.ts  fileNavigation.ts  fileNavigationDualPane.ts  fileNavigationPreview.ts  fileNavigationPrimary.ts  fileNavigationSelection.ts  (+25 more)
scripts/: cargo-audit-release.mjs  check-github-workflows.mjs  check-js-syntax.mjs  check-tauri-invokes.mjs  check-updater-config.mjs  generate-license.mjs  release.mjs  smoke-settings-startup.mjs
src-tauri/: Cargo.toml  build.rs  fix_backend.py  fix_rclone.py  simplefile.desktop.template  tauri.conf.json
src-tauri/.secrets/: simplefile-updater.key.pub
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  checksum.rs  cleanup.rs  compare.rs  db.rs  dbus.rs  drives.rs  drives_dbus.rs  dummy_commands.rs  fs_ops.rs  gdrive.rs  git.rs  github.rs  lib.rs  main.rs  metadata.rs  models.rs  open_with.rs  preview.rs  progress.rs  rar_installer.rs  rclone_installer.rs  search.rs  smart_folders.rs  state.rs  tags.rs  terminal.rs  updater.rs  utils.rs  watcher.rs
src-tauri/src/cloud/: dropbox_plugin.rs  gdrive_plugin.rs  mod.rs  onedrive_plugin.rs  pcloud_plugin.rs  s3_plugin.rs
(+86 files in other folders)
