[package]
name = "simplefile"
version = "1.1.0"
description = "A simple file explorer built with Tauri"
authors = ["SimpleFile Team"]
license-file = "../LICENSE"
repository = "https://github.com/conniecombs/SimpleFile-Svelte"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
notify = { version = "8", features = ["serde"] }
trash = "5"
md-5 = "0.11"
sha1 = "0.11"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "fs", "io-util", "net"] }
parking_lot = "0.12"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
png = "0.18"
zip = { version = "8", default-features = false, features = ["bzip2", "deflate64", "deflate", "lzma", "ppmd", "time", "zstd", "xz"] }
flate2 = "1"
tar = "0.4"
unrar = "0.5"
walkdir = "2"
filetime = "0.2"

futures = "0.3"
log = "0.4"
glob = "0.3"
once_cell = "1"
getrandom = "0.3"


# Used by checksum and disk cleanup code for streaming SHA-256 hashes.
sha2 = "0.11"

# Pull in the `exif` crate for reading EXIF metadata from image files. This
# small crate has no heavy dependencies and supports common image formats.
exif = { package = "kamadak-exif", version = "0.6" }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
tauri-plugin-single-instance = "2.4.2"
zbus = "5.16.0"
url = "2.5.8"
tauri-plugin-drag = "2.1.1"
directories = "6.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
xattr = "1.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
